--- a/ws/server/config.json
+++ b/ws/server/config.json
@@ -1,17 +1,17 @@
 {
-  "socketURL": "",
-  "dirPath": "",
-  "homePage": "",
-  "socketMessageEvent": "RTCMultiConnection-Message",
-  "socketCustomEvent": "RTCMultiConnection-Custom-Message",
-  "port": "9001",
-  "enableLogs": "false",
-  "autoRebootServerOnFailure": "false",
-  "isUseHTTPs": "true",
-  "sslKey": "../ssl/key.pem",
-  "sslCert": "../ssl/cert.pem",
-  "sslCabundle": "",
-  "enableAdmin": "false",
-  "adminUserName": "username",
-  "adminPassword": "password"
+    "socketURL": "",
+    "dirPath": "",
+    "homePage": "",
+    "socketMessageEvent": "RTCMultiConnection-Message",
+    "socketCustomEvent": "RTCMultiConnection-Custom-Message",
+    "port": "9001",
+    "enableLogs": "false",
+    "autoRebootServerOnFailure": "false",
+    "isUseHTTPs": "true",
+    "sslKey": "/etc/letsencrypt/live/dokunotary.ga/privkey.pem",
+    "sslCert": "/etc/letsencrypt/live/dokunotary.ga/cert.pem",
+    "sslCabundle": "",
+    "enableAdmin": "false",
+    "adminUserName": "username",
+    "adminPassword": "password"
 }
